@@ -1788,7 +1788,7 @@ operation.</p>
 The bin directory under the installed standalone toolchain dir must be added to your $PATH</p>
 <p>
 When using the Android NDK on a 64bit Linux system you have to install the
-following 32bit packages: <code>libstdc++.i686 glibc.i686</code>
+following 32bit packages: <code>libstdc++.i686 glibc.i686 ncurses-libs.i686</code>
 </p>
 <p>Due to Android's library loading restrictions, static linking is necessary
  for all included libraries.</p>
